2002-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp (Color): Use of 'new' and 'delete' in inlines was
 	causing memory allocation/deallocation problems for users of the
 	DLL build.  Problem was identified by Marc Iwan.

2002-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (compare): New method to compare current image
 	with a reference image.

2002-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (textEncoding): New method to allow setting the
 	default text encoding (e.g. "UTF-8").

	* lib/Drawable.cpp (DrawableText): Added an alternate constructor
 	to allow specifying the text encoding (e.g. "UTF-8").

2002-08-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Overall: Now compiles as a DLL using Visual C++.

2002-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (profile): Added method to store, delete, or
 	retrieve named application profiles.

2002-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (type): Set the ImageInfo type attribute when
 	setting the image type.  If the type attribute is set to something
 	other than UndefinedType (implying that the user has set a desired
 	output image type), then return that as the image type, otherwise
 	use GetImageType() to evaluate the image type.

2002-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableTextUnderColor): New class to set the
 	text undercolor.  When text undercolor is set, a rectangle of the
 	specified color is rendered under text annotations.

2002-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++ library no longer depends on iostreams at all.

2002-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (throwImageException): ExceptionInfo was not being
 	properly initialized.  This could cause some errors to cause an
 	abort in error.c rather than throwing an exception.
