@@ -10,7 +10,8 @@ This file records noteworthy changes in Magick++.
 (5.5.1)<BR>
 <UL>
   <LI> Fixed a Color memory allocation problem which became evident when
-    using the Magick++ DLL.
+    using the Magick++ DLL.<BR>
+  <LI> Completed implementation of Image textEncoding() method.  Oops!
 
 </UL>
 <p>
