@@ -3,6 +3,7 @@ This file records noteworthy changes in Magick++.
 (5.5.1)
   * Fixed a Color memory allocation problem which became evident when
     using the Magick++ DLL.
+  * Completed implementation of Image textEncoding() method.  Oops!
 
 (5.4.9)
   * Added the Image textEncoding() method and an encoding option to
