@@ -1,3 +1,8 @@
+2002-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Options.cpp (textEncoding): Had forgotten to implement
+ 	textEncoding!
+
 2002-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Color.cpp (Color): Use of 'new' and 'delete' in inlines was
